external-crates/move/crates/move-compiler/tests/move_check/parser/acquires_list_generic.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/acquires_list_generic.move:6:25
  │
6 │     fun foo() acquires B<CupC<R>> {
  │                         ^
  │                         │
  │                         Unexpected '<'
  │                         Expected ','

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/acquires_list_generic.move:6:25
  │
6 │     fun foo() acquires B<CupC<R>> {
  │                         ^
  │                         │
  │                         Unexpected '<'
  │                         Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

